- Updated blocks/rgrade
- theme/xtec2: fixed problem when more than 5 languages
- report/coursequotas: Added icons for usability and improved performance (Trello #1278)
- mod/jclic: Added support for JClic HTML5 player (Trello #1294)
- Updated mod/hotpot
- local/rcommon: Fixed bug when filtering users from a course with group mode different from "No groups" (Trello #1353)


Changes 16.09.07
---------------------------------------------------------------------------------------
- Updated LangPacks
- Updated mod/journal
- Updated auth/googleoauth2 to fix problems with login button (Trello #1321)
- mod/questionnaire: Fixed bug with CSV export (Trello #1322)
- gradelib: Fixed infinite loop "Recalculating grades" - MDL-55707  (Trello #1324)
- Applied path to avoid "Cannot find session record xxxxxxxxxxxxx for user Z, creating new session"
- report/coursequotas: Added filemanager (Trello #1278)


Changes 16.08.22
---------------------------------------------------------------------------------------
- Moodle upgraded to from 3.1.1 (Trello #1268)
- Updated LangPacks
- Updated auth/googleoauth2
- Updated blocks/progress
- Updated local/mobile
- Updated mod/choicegroup
- Updated mod/geogebra
- Updated mod/hotpot
- Updated mod/jclic
- Updated mod/journal
- Updated mod/questionnaire
- Updated mod/qv
- Updated all related wiris plugins


Changes 16.05.03
---------------------------------------------------------------------------------------
- Moodle upgraded to from 2.8.12 (Trello #1213)
- Updated local_mobile to 2.8.310
- Updated mod/questionaire
- Updated local/oauth
- local_agora: Changed default exceptionerror to avoid error in admin pages when datadir is not writable
- Zipped old log cron and mailer files until they will be deleted (Trello #1234)
- Updated mod/hotpot
- Added Quiz access rules: Offline attempts access rule to enable offline quizzes from the app


Changes 16.05.03
---------------------------------------------------------------------------------------