@@ -15,6 +15,7 @@ Changes 16.09.19
 - mod/jclic: Added support for JClic HTML5 player (Trello #1294)
 - Updated mod/hotpot
 - local/rcommon: Fixed bug when filtering users from a course with group mode different from "No groups" (Trello #1353)
+- login: Forgot password stopped working with loginhttps - MDL-55945 (Trello #1391)
 
 
 Changes 16.09.07
